fix(element borders): Added borders to Input and Button components.
Added borders to Input and Button elements until styling is further along
due to it not looking well without it at the moment.

--- a/client/src/scss/components/_button.scss
+++ b/client/src/scss/components/_button.scss
@@ -4,5 +4,5 @@
     min-width: u.rem(100);
     padding: u.rem(16) u.em(24);
     border-radius: u.em(5);
-    border: none;
+    border: 1px solid black;
 }
